[package]
name = "crystal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.30", features = ["serde"] }
env_logger = "0.10.0"
fang = "0.10.4"
log = "0.4.20"
reqwest = { version = "0.11.20", features = ["json", "blocking"] }
serde = "1.0.188"
serde_json = "1.0.105"

[[bin]]
name = "lattice"
path = "src/lattice/main.rs"

[[bin]]
name = "geode"
path = "src/geode/main.rs"
