[package]
name = "crystal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.30", features = ["serde"] }
clap = { version = "4.4.2", features = ["derive"] }
diesel = { version = "2.1.1", features = ["postgres"] }
dotenvy = "0.15.7"
env_logger = "0.10.0"
fang = { rev = "0.10.4.1", features = ["migrations_postgres"], git = "https://github.com/ayrat555/fang" }
log = "0.4.20"
postgres-native-tls = "0.5.0"
reqwest = { version = "0.11.20", features = ["json", "blocking"] }
serde = "1.0.188"
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }

[[bin]]
name = "lattice"
path = "src/lattice/main.rs"

[[bin]]
name = "geode"
path = "src/geode/main.rs"
