[package]
name = "crystal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bb8-postgres = "0.8.1"
chrono = { version = "0.4.30", features = ["serde"] }
clap = { version = "4.4.2", features = ["derive"] }
diesel = { version = "2.1.1", features = ["postgres"] }
diesel_migrations = "2.1.0"
dotenvy = "0.15.7"
env_logger = "0.10.0"
fang = { default-features = false, rev = "0.10.4.1", features = ["blocking", "asynk", "derive-error", "postgres", "migrations_postgres"], git = "https://github.com/ayrat555/fang" }
futures = "0.3.28"
gzip = "0.1.2"
log = "0.4.20"
native-tls = "0.2.11"
once_cell = "1.18.0"
postgres-native-tls = "0.5.0"
reqwest = { version = "0.11.20", features = ["json", "blocking", "gzip"] }
serde = "1.0.188"
serde_json = "1.0.105"
snafu = "0.7.5"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
tokio-postgres = "0.7.10"

[[bin]]
name = "lattice"
path = "src/lattice/main.rs"

[[bin]]
name = "geode"
path = "src/geode/main.rs"
